<resources>
    <string name="app_name">Thavare Daily</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username:</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email ID</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="home">Home</string>
    <string name="coins">Coins</string>
    <string name="favourites">Favourites</string>
    <string name="cart">Cart</string>
    <string name="notification">Notifications</string>
    <string name="more">more</string>
    <string name="tips_badge_removed">Badge Removed.</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="top_offers">Top Offers</string>
    <string name="see_all"><u>See All</u></string>
    <string name="categories">Categories</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="rs">\u20b9 %s</string>
</resources>
