<?xml version="1.0" encoding="utf-8"?>
<layout>
<data>
    <variable
        name="fragment"
        type="com.thavaredaily.view.user.LoginFragment" />
</data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.user.LoginFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_login_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_20dp"
            android:layout_marginEnd="@dimen/common_20dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/common_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/common_20dp"
                android:paddingTop="@dimen/common_20dp"
                android:paddingEnd="@dimen/common_20dp"
                android:paddingBottom="@dimen/common_48dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/log_in"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_16dp"
                    android:text="@string/username"
                    android:textColor="@color/colorBlack" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_4dp"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_16dp"
                    android:text="@string/password"
                    android:textColor="@color/colorBlack" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_4dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_56dp"
            android:layout_marginTop="@dimen/common_24dp"
            android:layout_marginEnd="@dimen/common_56dp"
            android:background="@drawable/btn_background"
            android:elevation="@dimen/common_12dp"
            android:text="@string/log_in"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="@id/cv_login_container"
            app:layout_constraintTop_toBottomOf="@id/cv_login_container"
            android:onClick="@{()-> fragment.navigateToHome()}"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_20dp"
            android:background="@android:color/transparent"
            android:text="@string/forgot_password"
            android:textColor="@color/colorBlack"
            android:theme="@style/Widget.MaterialComponents.Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_log_in" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/colorBlack" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/sign_up"
                android:textColor="@color/colorAccentDark"
                android:theme="@style/Widget.MaterialComponents.Button"
                android:onClick="@{()-> fragment.navigateToSignUp()}"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary" >

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_app_logo"
                    android:layout_width="@dimen/common_64dp"
                    android:layout_height="@dimen/common_64dp"
                    android:layout_marginTop="@dimen/common_64dp"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>