<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        android:paddingBottom="@dimen/common_56dp"
        tools:context=".view.fragments.HomeFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/common_56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/vp_offers"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_240dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.afollestad.viewpagerdots.DotsIndicator
                    android:id="@+id/dots"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_36dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_top_offers_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_16dp"
                    android:layout_marginEnd="@dimen/common_16dp"
                    android:text="@string/top_offers"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/see_all"
                        android:textColor="@color/colorBlue"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/common_16dp"/>
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_offers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                <TextView
                    android:id="@+id/tv_categories_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_16dp"
                    android:layout_marginStart="@dimen/common_16dp"
                    android:layout_marginEnd="@dimen/common_16dp"
                    android:text="@string/categories"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_16dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_56dp"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/ib_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/common_16dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_search"
                    android:tint="@color/colorWhite" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/ib_search"
                    android:drawableStart="@drawable/ic_location"
                    android:drawableTint="@color/colorWhite"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorWhite"
                    tools:targetApi="m"
                    android:text="Salika garchak" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>