<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.ProfileFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_profile"
        style="@style/MyCardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_240dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="@dimen/common_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/common_16dp">

                <ImageView
                    android:layout_width="@dimen/common_40dp"
                    android:layout_height="@dimen/common_40dp"
                    android:src="@drawable/coins" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_edit_profile_pic"
                    android:layout_width="@dimen/common_72dp"
                    android:layout_height="@dimen/common_72dp"
                    android:layout_gravity="center_horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/civ_profile_pic"
                        android:layout_width="@dimen/common_72dp"
                        android:layout_height="@dimen/common_72dp"
                        android:src="@drawable/profile_pic_sample" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_add_circle" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/common_8dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_24sp"
                    tools:text="Samaira Brexa" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/common_4dp"
                    tools:text="samairabrexa@gmail.com" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/common_4dp"
                    tools:text="+91-9045678652" />
            </LinearLayout>
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_36dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_profile">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_40dp"
            android:layout_marginStart="@dimen/common_16dp"
            android:layout_marginTop="@dimen/common_8dp"
            android:layout_marginEnd="@dimen/common_16dp"
            android:layout_marginBottom="@dimen/common_8dp">

            <ImageView
                android:layout_width="@dimen/common_36dp"
                android:layout_height="@dimen/common_36dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_lock_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/common_40dp"
                android:text="@string/change_password"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_18sp" />

            <ImageView
                android:layout_width="@dimen/common_24dp"
                android:layout_height="@dimen/common_24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_right_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_40dp"
            android:layout_marginStart="@dimen/common_16dp"
            android:layout_marginTop="@dimen/common_8dp"
            android:layout_marginEnd="@dimen/common_16dp"
            android:layout_marginBottom="@dimen/common_8dp">

            <ImageView
                android:layout_width="@dimen/common_36dp"
                android:layout_height="@dimen/common_36dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_location" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/common_40dp"
                android:text="@string/delivery_address"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_18sp" />

            <ImageView
                android:layout_width="@dimen/common_24dp"
                android:layout_height="@dimen/common_24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_right_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_40dp"
            android:layout_marginStart="@dimen/common_16dp"
            android:layout_marginTop="@dimen/common_8dp"
            android:layout_marginEnd="@dimen/common_16dp"
            android:layout_marginBottom="@dimen/common_8dp">

            <ImageView
                android:layout_width="@dimen/common_36dp"
                android:layout_height="@dimen/common_36dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_logout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/common_40dp"
                android:text="@string/logout"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_18sp" />

            <ImageView
                android:layout_width="@dimen/common_24dp"
                android:layout_height="@dimen/common_24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_right_arrow" />
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>